# knoto

./: .gitignore  README.md  index.html  metadata.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  tsconfig.json  vite.config.ts
.build/: create-symlink.js  sync-metadata.js
.github/workflows/: template-sync.yml
src-back/: install.spec
src-back/pyserver/: _generate_test_data.py  cli.py  db.py  main.py  model.py  store.py  utils.py
src-front/: App.tsx
src-front/components/: APITest.tsx  ConnectButton.tsx  EmptyScreen.tsx  FixedGraph.tsx
src-front/components/AtlasRenderer/: AtlasControls.tsx  HoverHighlight.tsx  HoverSelect.tsx  Node.tsx  Nodes.tsx  R3FTest.tsx  Triangle.tsx  _reference.tsx  helper.ts  index.tsx  useMouseClick.ts  useNodeHover.ts
src-front/components/AtlasRenderer/lib/: node.frag  node.vert
src-front/components/Menu/: Spinner.tsx  Status.tsx  index.tsx  menuComponent.tsx  menuMac.ts
src-front/components/NoteEditor/: index.tsx  theme.ts
src-front/components/NoteEditor/plugins/: ConfirmAddition.tsx  FileName.tsx  GracefulBlur.tsx  Toolbar.tsx  TreeView.tsx
src-front/components/Primitives/: Button.tsx
src-front/components/Primitives/Button/: index.tsx  utils.ts
src-front/components/TextEditor/: TextEditor.tsx
src-front/components/TextEditor/plugins/: Toolbar.tsx
src-front/hooks/: useRename.ts
src-front/store/: applicationStore.ts  atlasStore.ts  collectionStore.ts  storeHelpers.ts
src-front/store/middleware/: logger.ts  withPersistentStorage.ts
src-front/styles/: app.css
src-front/utils/: api.ts  filesystem.ts  menu.ts  types.ts  zustand.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
