[tool.poetry]
name = "knoto"
version = "0.1.0"
description = "spatial knowledge organization"
authors = ["whatphilipcodes <hello@whatphilipdoes.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.10,<3.13"
pyinstaller = "^6.11.1"
numpy = ">=1.0.0,<2.0.0"
numba = ">=0.61.0,<0.62.0"
umap-learn = ">=0.5.7,<0.6.0"
datasets = ">=3.4.0,<4.0.0"
sentence-transformers = ">=3.4.1,<4.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
torch = "==2.2.2"

[tool.poetry.dependencies.fastapi]
extras = ["standard"]
version = "^0.115.5"
