[package]
name = "knoto"
version = "0.1.0"
description = "spatial knowledge organization"
authors = [ "whatphilipcodes <hello@whatphilipdoes.com>" ]
edition = "2021"

[lib]
name = "taupy_lib"
crate-type = [ "staticlib", "cdylib", "rlib" ]

[build-dependencies.tauri-build]
version = "2"
features = [ ]

[dependencies]
tauri-plugin-shell = "2"
serde_json = "1"
sysinfo = "0.33.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"

  [dependencies.tauri]
  version = "2"
  features = [ ]

  [dependencies.serde]
  version = "1"
  features = [ "derive" ]

[features]
ignore = [ ]
